# type_erasure

./: CMakeLists.txt  README.md
include/concepts/: member_func_check.hpp  pushpop_concept.hpp
include/type_erasure/: any_pushpop.hpp  any_pushpop_simple.hpp  push_pop_interface.hpp  stringref.hpp
include/user/: client_class.hpp  string.hpp  user_types.hpp
src/: main_any.cpp  main_any_client.cpp  main_any_simple.cpp  main_polymorphic.cpp  main_stringref.cpp
